--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Template 01</title>
+
+    <!-- custom css file link  -->
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-    
+    <!-- header section starts      -->
+    <header>
+            <h1>Header</h1>
+    </header>
+    <!-- header section ends-->
+
+    <div id="fully-page" class="fully-page">
+
+        <section>
+            <h3>Section</h3>
+        </section>        
+
+    </div><!-- fully-page -->   
+
+    <!-- footer section starts      -->
+    <footer>
+        <h1>Footer</h1>
+    </footer> 
+    <!-- Footer section ends-->
 </body>
 </html>
