--- a/index.html
+++ b/index.html
@@ -19,9 +19,51 @@
 
     <div id="fully-page" class="fully-page">
 
-        <section>
-            <h3>Section</h3>
-        </section>        
+        <section class="sec__slider">
+            <h3>Section Slider</h3>
+        </section>       
+        
+        <section class="sec__about">
+            <h3>Section About</h3>
+        </section>  
+
+        <section class="sec__sevice">
+            <h3>Section Service</h3>
+        </section>  
+
+        <section class="sec__product">
+            <h3>Section Product</h3>
+        </section>  
+
+        <section class="sec__category">
+            <h3>Section Product Category</h3>
+        </section>  
+
+        <section class="sec__news">
+            <h3>Section News</h3>
+        </section>  
+
+        <section class="sec__customer">
+            <h3>Section Customer</h3>
+        </section>  
+
+        <section class="sec__partner">
+            <h3>Section Partner</h3>
+        </section>  
+
+        <section class="sec__team">
+            <h3>Section Team</h3>
+        </section>  
+
+        <section class="sec__testimony">
+            <h3>Section Testimony</h3>
+        </section>  
+
+        <section class="sec__instagram">
+            <h3>Section Instagram</h3>
+        </section>  
+
+
 
     </div><!-- fully-page -->   
 
