adding main tag on home page

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 
 </head>
 <body>
+<div id="fully-page" class="fully-page">
+
     <!-- header section starts      -->
     <header>
             <h1>Header</h1>
     </header>
     <!-- header section ends-->
-
-    <div id="fully-page" class="fully-page">
+    
+    <main>
 
         <section class="sec__slider">
             <h3>Section Slider</h3>
@@ -64,13 +66,13 @@
         </section>  
 
 
-
-    </div><!-- fully-page -->   
+    <main>       
 
     <!-- footer section starts      -->
     <footer>
         <h1>Footer</h1>
     </footer> 
     <!-- Footer section ends-->
+</div><!-- fully-page -->
 </body>
 </html>
