programming the mobile css menu

--- a/index.html
+++ b/index.html
@@ -13,15 +13,58 @@
     <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-<div id="fully-page" class="fully-page">
+<div id="fully__page" class="fully__page">
 
     <!-- header section starts      -->
-    <header>
-            <h1>Header</h1>
+    <header class="header__main">
+        <nav class="header__nav">
+            <div class="header__menu container-fluid">
+
+                <div class="header__logo">
+                    <a class="navbar-brand" href="#">Navbar</a>
+                </div><!-- header__logo -->                
+
+                <div class="menu__nav" id="">
+                    <div class="hamburger">
+                        <div class="bar"></div>
+                    </div>
+                    <ul  class="menu__list">
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-483"><a href="http://escolasaojorge.com.br/site/">Home</a></li>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8179"><a href="#">A Escola</a>
+                        <ul class="sub-menu">
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-486"><a href="https://escolasaojorge.com.br/site/a-escola/">Nossa História</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="https://escolasaojorge.com.br/site/estrutura/">Estrutura</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1422"><a href="https://escolasaojorge.com.br/site/objetivo/">Objetivo</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1423"><a href="https://escolasaojorge.com.br/site/metodologia/">Metodologia</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1421"><a href="https://escolasaojorge.com.br/site/equipe/">Equipe</a></li>
+                        </ul>
+                        </li>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8190"><a href="#">Ensino e Serviços</a>
+                        <ul class="sub-menu">
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8192"><a href="https://escolasaojorge.com.br/site/educacao-infantil/">Ensino Infantil</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8193"><a href="https://escolasaojorge.com.br/site/ensino-fundamental/">Ensino Fundamental I e II</a></li>
+                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8194"><a href="https://escolasaojorge.com.br/site/ensino-medio/">Ensino Médio</a></li>
+                        </ul>
+                        </li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-488"><a href="https://escolasaojorge.com.br/site/contato/">Contato</a></li>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8210"><a href="#">MATRÍCULAS</a>
+                        <ul class="sub-menu">
+                            <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8208"><a href="https://www.escolasaojorge.com.br/novatos">Matrículas Novatos</a></li>
+                            <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8209"><a href="https://www.escolasaojorge.com.br/veteranos">Matrículas Alunos Veteranos</a></li>
+                        </ul>
+                        </li>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8191"><a href="#">MATRÍCULAS</a></li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8217"><a href="https://escolasaojorge.com.br/site/lista-de-materiais/">Lista de Materiais</a></li>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-490"><a target="_blank" href="http://app2.activesoft.com.br/sistema/entrar.asp?p=SAOJORGE">Área do Aluno</a></li>
+                        <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1419"><a href="https://escolasaojorge.com.br/site/calendario-escolar/">Baixe nossa agenda</a></li>
+                    </ul>
+                </div><!-- navbar-collapse -->
+            </div><!-- container-fluid -->
+        </nav>        
     </header>
     <!-- header section ends-->
     
@@ -75,7 +118,7 @@
     </main>       
 
     <!-- footer section starts      -->
-    <footer>
+    <footer class="footer__main">
         <h1>Footer</h1>
     </footer> 
     <!-- Footer section ends-->
