--- a/index.html
+++ b/index.html
@@ -130,5 +130,6 @@
 <!-- swiffy slider 1.6 JS -->
 <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
 
+<script src="assets/menu/menu-func.js"></script>
 </body>
 </html>
