--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- getbootstrap 5.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- swiffy slider 1.6 CSS -->    
     <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
@@ -28,13 +29,15 @@
                     <a class="navbar-brand" href="#">Navbar</a>
                 </div><!-- header__logo -->                
 
-                <div class="menu__nav" id="">
+                <div class="menu" id="">
                     <div class="hamburger">
                         <div class="bar"></div>
                     </div>
+                    <div class="menu__nav">
+                        <div class="menu__label">Menu</div>
                     <ul  class="menu__list">
                         <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-483"><a href="http://escolasaojorge.com.br/site/">Home</a></li>
-                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8179"><a href="#">A Escola</a>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8179"><a href="#">A Escola <i class="bi bi-chevron-left"></i></a>
                         <ul class="sub-menu">
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-486"><a href="https://escolasaojorge.com.br/site/a-escola/">Nossa História</a></li>
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="https://escolasaojorge.com.br/site/estrutura/">Estrutura</a></li>
@@ -62,6 +65,7 @@
                         <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-490"><a target="_blank" href="http://app2.activesoft.com.br/sistema/entrar.asp?p=SAOJORGE">Área do Aluno</a></li>
                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1419"><a href="https://escolasaojorge.com.br/site/calendario-escolar/">Baixe nossa agenda</a></li>
                     </ul>
+                    </div><!-- menu__nav -->
                 </div><!-- navbar-collapse -->
             </div><!-- container-fluid -->
         </nav>        
