--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="menu__label">Menu</div>
                     <ul  class="menu__list">
                         <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-483"><a href="http://escolasaojorge.com.br/site/">Home</a></li>
-                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8179"><a href="#">A Escola <i class="bi bi-chevron-left"></i></a>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8179"><a href="#">A Escola</a>
                         <ul class="sub-menu">
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-486"><a href="https://escolasaojorge.com.br/site/a-escola/">Nossa História</a></li>
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="https://escolasaojorge.com.br/site/estrutura/">Estrutura</a></li>
@@ -46,7 +46,7 @@
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1421"><a href="https://escolasaojorge.com.br/site/equipe/">Equipe</a></li>
                         </ul>
                         </li>
-                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8190"><a href="#">Ensino e Serviços</a>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8190" ><a href="#">Ensino e Serviços</a>
                         <ul class="sub-menu">
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8192"><a href="https://escolasaojorge.com.br/site/educacao-infantil/">Ensino Infantil</a></li>
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8193"><a href="https://escolasaojorge.com.br/site/ensino-fundamental/">Ensino Fundamental I e II</a></li>
