--- a/index.html
+++ b/index.html
@@ -38,43 +38,43 @@
                     <div class="menu__nav">
                         <div class="menu__label">Menu</div>
                         <ul  class="menu__list">
-                            <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-483"><a href="http://escolasaojorge.com.br/site/">Home</a></li>
-                            <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8179"><a href="#">A Escola</a>
+                            <li class="menu-item"><a href="#">Home</a></li>
+                            <li class="menu-item menu-item-has-children"><a href="#">A Escola</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-486"><a href="https://escolasaojorge.com.br/site/a-escola/">Nossa História</a></li>
-                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="https://escolasaojorge.com.br/site/estrutura/">Estrutura</a></li>
-                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1422"><a href="https://escolasaojorge.com.br/site/objetivo/">Objetivo</a></li>
-                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1423"><a href="https://escolasaojorge.com.br/site/metodologia/">Metodologia</a></li>
-                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1421"><a href="https://escolasaojorge.com.br/site/equipe/">Equipe</a></li>
+                                <li class="menu-item"><a href="#">Nossa História</a></li>
+                                <li class="menu-item"><a href="#">Estrutura</a></li>
+                                <li class="menu-item"><a href="#">Objetivo</a></li>
+                                <li class="menu-item"><a href="#">Metodologia</a></li>
+                                <li class="menu-item"><a href="#">Equipe</a></li>
                                 <!-- Level 3 Menu -->
                                 <li class="menu-item menu-item-has-children"><a href="#">Level 3 Menu</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item "><a href="#">Nossa História</a></li>
-                                        <li class="menu-item "><a href="#">Estrutura</a></li>
-                                        <li class="menu-item 2"><a href="#">Objetivo</a></li>
-                                        <li class="menu-item 3"><a href="#">Metodologia</a></li>
+                                        <li class="menu-item"><a href="#">Nossa História</a></li>
+                                        <li class="menu-item"><a href="#">Estrutura</a></li>
+                                        <li class="menu-item"><a href="#">Objetivo</a></li>
+                                        <li class="menu-item"><a href="#">Metodologia</a></li>
                                     </ul>        
                                 </li>
                             </ul>
                             </li>
-                            <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8190" ><a href="#">Ensino e Serviços</a>
+                            <li class="menu-item menu-item-has-children" ><a href="#">Ensino e Serviços</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8192"><a href="https://escolasaojorge.com.br/site/educacao-infantil/">Ensino Infantil</a></li>
-                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8193"><a href="https://escolasaojorge.com.br/site/ensino-fundamental/">Ensino Fundamental I e II</a></li>
-                                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8194"><a href="https://escolasaojorge.com.br/site/ensino-medio/">Ensino Médio</a></li>
+                                <li class="menu-item"><a href="#">Ensino Infantil</a></li>
+                                <li class="menu-item"><a href="#">Ensino Fundamental I e II</a></li>
+                                <li class="menu-item"><a href="#">Ensino Médio</a></li>
                             </ul>
                             </li>
-                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-488"><a href="https://escolasaojorge.com.br/site/contato/">Contato</a></li>
-                            <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-8210"><a href="#">MATRÍCULAS</a>
+                            <li class="menu-item"><a href="#">Contato</a></li>
+                            <li class="menu-item menu-item-has-children"><a href="#">MATRÍCULAS</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8208"><a href="https://www.escolasaojorge.com.br/novatos">Matrículas Novatos</a></li>
-                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8209"><a href="https://www.escolasaojorge.com.br/veteranos">Matrículas Alunos Veteranos</a></li>
+                                <li class="menu-item"><a href="#">Matrículas Novatos</a></li>
+                                <li class="menu-item"><a href="#">Matrículas Alunos Veteranos</a></li>
                             </ul>
                             </li>
-                            <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-8191"><a href="#">MATRÍCULAS</a></li>
-                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8217"><a href="https://escolasaojorge.com.br/site/lista-de-materiais/">Lista de Materiais</a></li>
-                            <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-490"><a target="_blank" href="http://app2.activesoft.com.br/sistema/entrar.asp?p=SAOJORGE">Área do Aluno</a></li>
-                            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1419"><a href="https://escolasaojorge.com.br/site/calendario-escolar/">Baixe nossa agenda</a></li>
+                            <li class="menu-item"><a href="#">MATRÍCULAS</a></li>
+                            <li class="menu-item"><a href="#">Lista de Materiais</a></li>
+                            <li class="menu-item"><a target="_blank" href="#">Área do Aluno</a></li>
+                            <li class="menu-item"><a href="#">Baixe nossa agenda</a></li>
                         </ul>
                     </div><!-- menu__nav -->
                 </div><!-- navbar-collapse -->
