--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 
         <section class="sec__slider">            
 
-            <div class="swiffy-slider slider-item-ratio slider-item-ratio-21x9 slider-nav-autoplay slider-nav-autopause" data-slider-nav-autoplay-interval="2000">
+            <div class="swiffy-slider slider-item-ratio slider-item-ratio-21x9 slider-nav-autoplay slider-nav-autopause" data-slider-nav-autoplay-interval="15000">
                 <!-- image sliders -->
                 <ul class="slider-container">
                     <li>
                         <img src="img/slider-1.jpg" loading="lazy" alt="...">
                         <div class="card-img-overlay d-flex align-items-start align-items-md-center justify-content-center flex-column">
-                            <h2 class="card-title h1 d-block d-md-inline-block">The Aston Martin DB5</h2>
-                            <p class="card-text lead col-md-8 col-lg-6">The Aston Martin DB5 is a British luxury grand tourer (GT) that was made by Aston Martin and designed by the Italian coachbuilder Carrozzeria Touring Superleggera. </p>
+                            <h2 class="slider__title slider__title--white card-title h1 d-block d-md-inline-block">The Aston Martin DB5</h2>
+                            <p class="slider__text slider__text--white card-text lead col-md-8 col-lg-6">The Aston Martin DB5 is a British luxury grand tourer (GT) that was made by Aston Martin and designed by the Italian coachbuilder Carrozzeria Touring Superleggera. </p>
                         </div>
                     </li>
                     <li><img src="img/slider-2.jpg" loading="lazy" alt="..."></li>
