programming white menu

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <div class="header__logo">
                     <a class="navbar-brand" href="#">
-                        <img class="img-fluid" src="img/logo-site.png">
+                        <img class="img-fluid" src="img/logo-site-back.png">
                     </a>
                 </div><!-- header__logo -->                
 
