programming products section css+html

--- a/index.html
+++ b/index.html
@@ -313,90 +313,199 @@ Praesent tellus lorem, venenatis fringilla facilisis sit amet, tempor eu augue. 
                     <li class="product__unity">
                         <div class="product__card card border-0">
                             <div class="ratio ratio-1x1">
-                                <img src="img/shoes/shoe1.webp" class="product__img card-img-top" loading="lazy" alt="...">
+                                <a href="#">
+                                    <img src="img/shoes/shoe1.webp" class="product__img img-fluid card-img-top" loading="lazy" alt="...">
+                                </a>
                             </div>
-                            <div class="card-body p-0 pt-2">
+                            <div class="product__content card-body p-0 pt-2">
                                 <div class="d-flex">
-                                    <h3 class="product__title flex-grow-1 h5">LeBron 18</h3>
+                                    <h3 class="product__title flex-grow-1 h5">
+                                        <a href="#"> LeBron 18</a>
+                                    </h3>
                                     <p class="product__price px-2">$200</p>
                                 </div>
-                                <p class="product__info card-text">Basketball Shoes</p>
-                                <div class="btn-group" role="group" aria-label="Basic outlined example">
-                                    <button type="button" class="btn btn-outline-primary"><i class="bi bi-cart-plus"></i> Add To Cart</button>
-                                    <button type="button" class="btn btn-outline-primary"><i class="bi bi-eye"></i> See details</button>
-                                    <button type="button" class="btn btn-outline-primary"><i class="bi bi-bag-heart"></i> Favorite</button>
-                                </div>
+
+                                <div class="product__info card-text">Basketball Shoes</div>
+
+                                <div class="product__btn btn-group" role="group" aria-label="Basic outlined example">
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-cart-plus"></i></span> 
+                                        <span class="d-block">Add To Cart</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-eye"></i></span> 
+                                        <span class="d-block">See details</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-bag-heart"></i></span>
+                                        <span class="d-block">Favorite</span>
+                                    </button>
+                                </div><!-- product__btn -->
 
                             </div>
                         </div>
                     </li>
-                    <li>
-                        <div class="card border-0">
+                    <li class="product__unity">
+                        <div class="product__card card border-0">
                             <div class="ratio ratio-1x1">
-                                <img src="img/shoes/shoe2.webp" class="card-img-top" loading="lazy" alt="...">
+                                <a href="#">
+                                <img src="img/shoes/shoe2.webp" class="product__img img-fluid card-img-top" loading="lazy" alt="...">
+                                </a>
                             </div>
-                            <div class="card-body p-0 pt-2">
+                            <div class="product__content card-body p-0 pt-2">
                                 <div class="d-flex">
-                                    <h3 class="flex-grow-1 h5">Nike Air Vapormax 2021 FK</h3>
-                                    <p class="px-2">$200</p>
+                                    <h3 class="product__title flex-grow-1 h5">
+                                        <a href="#">Nike Air Vapormax 2021 FK</a>
+                                    </h3>
+                                    <p class="product__price px-2">$200</p>
                                 </div>
-                                <p class="card-text">Women's Shoes</p>
+                                <div class="product__info card-text">Women's Shoes</div>
+
+                                <div class="product__btn btn-group" role="group" aria-label="Basic outlined example">
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-cart-plus"></i></span> 
+                                        <span class="d-block">Add To Cart</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-eye"></i></span> 
+                                        <span class="d-block">See details</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-bag-heart"></i></span>
+                                        <span class="d-block">Favorite</span>
+                                    </button>
+                                </div><!-- product__btn -->
                             </div>
                         </div>
                     </li>
-                    <li>
-                        <div class="card border-0">
+                    <li class="product__unity">
+                        <div class="product__card card border-0">
                             <div class="ratio ratio-1x1">
-                                <img src="img/shoes/shoe3.webp" class="card-img-top" loading="lazy" alt="...">
+                                <a href="#">
+                                <img src="img/shoes/shoe3.webp" class="product__img img-fluid card-img-top" loading="lazy" alt="...">
+                                </a>
                             </div>
-                            <div class="card-body p-0 pt-2">
+                            <div class="product__content card-body p-0 pt-2">
                                 <div class="d-flex">
-                                    <h3 class="flex-grow-1 h5">Nike Air Force 1 Fontanka</h3>
-                                    <p class="px-2">$110</p>
+                                    <h3 class="product__title flex-grow-1 h5">
+                                        <a href="#">Nike Air Force 1 Fontanka</a>
+                                    </h3>
+                                    <p class="product__price px-2">$110</p>
                                 </div>
-                                <p class="card-text">Women's Shoes</p>
+                                <div class="product__info card-text">Women's Shoes</div>
+
+                                <div class="product__btn btn-group" role="group" aria-label="Basic outlined example">
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-cart-plus"></i></span> 
+                                        <span class="d-block">Add To Cart</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-eye"></i></span> 
+                                        <span class="d-block">See details</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-bag-heart"></i></span>
+                                        <span class="d-block">Favorite</span>
+                                    </button>
+                                </div><!-- product__btn -->
                             </div>
                         </div>
                     </li>
-                    <li>
-                        <div class="card border-0">
+                    <li class="product__unity">
+                        <div class="product__card card border-0">
                             <div class="ratio ratio-1x1">
-                                <img src="img/shoes/shoe4.webp" class="card-img-top" loading="lazy" alt="...">
+                                <a href="#">
+                                <img src="img/shoes/shoe4.webp" class="product__img img-fluid card-img-top" loading="lazy" alt="...">
+                                </a>
                             </div>
-                            <div class="card-body p-0 pt-2">
+                            <div class="product__content card-body p-0 pt-2">
                                 <div class="d-flex">
-                                    <h3 class="flex-grow-1 h5">Kyrie 7</h3>
-                                    <p class="px-2">$130</p>
+                                    <h3 class="product__title flex-grow-1 h5">
+                                        <a href="#">Kyrie 7</a>
+                                    </h3>
+                                    <p class="product__price px-2">$130</p>
                                 </div>
-                                <p class="card-text">Basketball Shoes</p>
+                                <div class="product__info card-text">Basketball Shoes</div>
+
+                                <div class="product__btn btn-group" role="group" aria-label="Basic outlined example">
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-cart-plus"></i></span> 
+                                        <span class="d-block">Add To Cart</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-eye"></i></span> 
+                                        <span class="d-block">See details</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-bag-heart"></i></span>
+                                        <span class="d-block">Favorite</span>
+                                    </button>
+                                </div><!-- product__btn -->
                             </div>
                         </div>
                     </li>
-                    <li>
-                        <div class="card border-0">
+                    <li class="product__unity">
+                        <div class="product__card card border-0">
                             <div class="ratio ratio-1x1">
-                                <img src="img/shoes/shoe5.webp" class="card-img-top" loading="lazy" alt="...">
+                                <a href="#">
+                                <img src="img/shoes/shoe5.webp" class="product__img img-fluid card-img-top" loading="lazy" alt="...">
+                                </a>
                             </div>
-                            <div class="card-body p-0 pt-2">
+                            <div class="product__content card-body p-0 pt-2">
                                 <div class="d-flex">
-                                    <h3 class="flex-grow-1 h5">Kyrie 7</h3>
-                                    <p class="px-2">$110</p>
+                                    <h3 class="product__title flex-grow-1 h5">
+                                        <a href="#">Kyrie 7</a>
+                                    </h3>
+                                    <p class="product__price px-2">$110</p>
                                 </div>
-                                <p class="card-text">Big Kids' Basketball Shoes</p>
+                                <div class="product__info card-text">Big Kids' Basketball Shoes</div>
+                                
+                                <div class="product__btn btn-group" role="group" aria-label="Basic outlined example">
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-cart-plus"></i></span> 
+                                        <span class="d-block">Add To Cart</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-eye"></i></span> 
+                                        <span class="d-block">See details</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-bag-heart"></i></span>
+                                        <span class="d-block">Favorite</span>
+                                    </button>
+                                </div><!-- product__btn -->
                             </div>
                         </div>
                     </li>
-                    <li>
-                        <div class="card border-0">
+                    <li class="product__unity">
+                        <div class="product__card card border-0">
                             <div class="ratio ratio-1x1">
-                                <img src="img/shoes/shoe6.webp" class="card-img-top" loading="lazy" alt="...">
+                                <a href="#">
+                                <img src="img/shoes/shoe6.webp" class="product__img card-img-top" loading="lazy" alt="...">
+                                </a>
                             </div>
-                            <div class="card-body p-0 pt-2">
+                            <div class="product__content card-body p-0 pt-2">
                                 <div class="d-flex">
-                                    <h3 class="flex-grow-1 h5">Nike Air Max 90 Premium</h3>
-                                    <p class="px-2">$130</p>
+                                    <h3 class="product__title flex-grow-1 h5">
+                                        <a href="#">Nike Air Max 90 Premium</a>
+                                    </h3>
+                                    <p class="product__price px-2">$130</p>
                                 </div>
-                                <p class="card-text">Men's Shoes</p>
+                                <div class="product__info card-text">Men's Shoes</div>
+                                <div class="product__btn btn-group" role="group" aria-label="Basic outlined example">
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-cart-plus"></i></span> 
+                                        <span class="d-block">Add To Cart</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-eye"></i></span> 
+                                        <span class="d-block">See details</span>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-primary">
+                                        <span class="d-block"><i class="bi bi-bag-heart"></i></span>
+                                        <span class="d-block">Favorite</span>
+                                    </button>
+                                </div><!-- product__btn -->
                             </div>
                         </div>
                     </li>
