programming category section css+html

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ Praesent tellus lorem, venenatis fringilla facilisis sit amet, tempor eu augue. 
                     <div class="divider"></div>
                 </div>
 
-            <div class="product__grid swiffy-slider slider-item-show3 slider-nav-square slider-nav-page slider-nav-outside-expand">
+            <div class="product__grid swiffy-slider slider-item-show3 slider-nav-dark slider-nav-page slider-nav-outside-expand">
                 <ul class="product__list slider-container">
                     <li class="product__unity">
                         <div class="product__card card border-0">
@@ -519,7 +519,127 @@ Praesent tellus lorem, venenatis fringilla facilisis sit amet, tempor eu augue. 
         </section>  
 
         <section class="sec__category">
-            <h3>Section Product Category</h3>
+            <h3></h3>
+            <div class="container">
+                <div class="category__header wrapper__title mb-5">
+                    <h1>Section Product Category</h1>
+                    <div class="divider"></div>
+                </div>
+
+                <div class="category__grid swiffy-slider slider-item-show4 slider-item-show2-sm slider-nav-dark slider-nav-outside-expand ">
+                    <ul class="category__list slider-container py-4" id="slider2">
+
+                        <li class="category__unity">
+                            <div class="category__card card shadow h-100">
+                                <div class="ratio ratio-1x1">
+                                    <a href="#">
+                                        <img src="img/shoes/shoe1.webp" class="category__img img-fluid card-img-top" loading="lazy" alt="...">
+                                    </a>
+                                </div>
+                                <div class="category__content card-body">                                                                       
+                                    <p class="category__title card-text text-center">
+                                        <a href="#">Basketball Shoes</a>
+                                    </p>                                                                     
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="category__unity">
+                            <div class="category__card card shadow h-100">
+                                <div class="ratio ratio-1x1">
+                                    <a href="#">
+                                        <img src="img/shoes/shoe2.webp" class="category__img img-fluid card-img-top" loading="lazy" alt="...">
+                                    </a>
+                                </div>
+                                <div class="category__content card-body">                                                                       
+                                    <p class="category__title card-text text-center">
+                                        <a href="#">Nike Air Vapormax 2021 FK</a>
+                                    </p>                                                                     
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="category__unity">
+                            <div class="category__card card shadow h-100">
+                                <div class="ratio ratio-1x1">
+                                    <a href="#">
+                                        <img src="img/shoes/shoe3.webp" class="category__img img-fluid card-img-top" loading="lazy" alt="...">
+                                    </a>
+                                </div>
+                                <div class="category__content card-body">                                                                       
+                                    <p class="category__title card-text text-center">
+                                        <a href="#">Nike Air Force 1 Fontanka</a>
+                                    </p>                                                                     
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="category__unity">
+                            <div class="category__card card shadow h-100">
+                                <div class="ratio ratio-1x1">
+                                    <a href="#">
+                                        <img src="img/shoes/shoe4.webp" class="category__img img-fluid card-img-top" loading="lazy" alt="...">
+                                    </a>
+                                </div>
+                                <div class="category__content card-body">                                                                       
+                                    <p class="category__title card-text text-center">
+                                        <a href="#">Kyrie 7</a>
+                                    </p>                                                                     
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="category__unity">
+                            <div class="category__card card shadow h-100">
+                                <div class="ratio ratio-1x1">
+                                    <a href="#">
+                                        <img src="img/shoes/shoe5.webp" class="category__img img-fluid card-img-top" loading="lazy" alt="...">
+                                    </a>
+                                </div>
+                                <div class="category__content card-body">                                                                       
+                                    <p class="category__title card-text text-center">
+                                        <a href="#">Nike Kyrie 8</a>
+                                    </p>                                                                     
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="category__unity">
+                            <div class="category__card card shadow h-100">
+                                <div class="ratio ratio-1x1">
+                                    <a href="#">
+                                        <img src="img/shoes/shoe6.webp" class="category__img img-fluid card-img-top" loading="lazy" alt="...">
+                                    </a>
+                                </div>
+                                <div class="category__content card-body">                                                                       
+                                    <p class="category__title card-text text-center">
+                                        <a href="#">Nike Air Max 90 Premium</a>
+                                    </p>                                                                     
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="category__unity">
+                            <div class="category__card card shadow h-100">
+                                <div class="ratio ratio-1x1">
+                                    <a href="#">
+                                        <img src="img/shoes/shoe6.webp" class="category__img img-fluid card-img-top" loading="lazy" alt="...">
+                                    </a>
+                                </div>
+                                <div class="category__content card-body">                                                                       
+                                    <p class="category__title card-text text-center">
+                                        <a href="#">Nike Air Max 90 Premium</a>
+                                    </p>                                                                     
+                                </div>
+                            </div>
+                        </li>
+                        
+                    </ul>
+                
+                    <button type="button" class="slider-nav" aria-label="Go to previous"></button>
+                    <button type="button" class="slider-nav slider-nav-next" aria-label="Go to next"></button>
+                </div><!-- swiffy-slider -->
+            </div><!-- container -->
         </section>  
 
         <section class="sec__news">
